# wadi

./: .gitignore  BLENDERKIT_INSTRUCTIONS.md  CLAUDE.md  README.md  TEXTURE_DOWNLOAD_INSTRUCTIONS.md  auto_crop_perspectives.py  blender_3d.py  build_and_render_realistic.py  commit.sh  config.py  generate_elevations_debug.py  generate_floor_plans.py  generate_pdf.py  generate_pillar_elevations.py  house_config.py  house_expand.py  konkan_house_config.py  konkan_house_lib.py  objects_debug_back_floor0.json  objects_debug_front_floor0.json  objects_debug_left_floor1.json  objects_debug_right_floor0.json  regenerate_combined_svgs.py  render_all_final.py  render_all_perspectives_with_textures.py  render_final_textures.py  render_realistic_perspectives.py  render_with_blenderkit.py  render_with_procedural.py  render_with_textures.py  roof_frame.py  roof_geometry.py  svg_2d.py  test_crop_debug.py  test_texture_scale.py  textures
archive/: generate_3d_models.py
docs/: CNAME  README.md  house-config-rules.md  house_config.json  index.html  konkan_house.glb  konkan_house_exploded.glb  layers.json  objects_debug_back_floor1.json  objects_debug_back_floor2.json  objects_debug_front_floor1.json  objects_debug_front_floor2.json  objects_debug_left_floor0.json  objects_debug_left_floor2.json  objects_debug_right_floor1.json  objects_debug_right_floor2.json
editor/: README.md  index.html  package-lock.json  package.json  viewer.html  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+211 files in other folders)
